Reality Check 1.0.0: Complete rewrite as multi-module fluent assertion library
Rewrite the project from a single-module validation library into a modern,
multi-module assertion framework for Java 17+ with 1,800+ tests at 95%+
line coverage.

Modules: core, json, xml, yaml, snapshot, junit5, bom

Key additions:
- 60+ check classes (string, number, collection, map, file, CSV, URI,
  date/time, exception, stream, enum, sealed class, byte/int/long/double
  arrays, BigDecimal, BigInteger, UUID, regex match, execution timing)
- JSON structural diff with dot-path, array-index, and bracket notation
- RFC 4180-compliant CSV parser with quoted fields and multiline support
- XXE-safe XML assertions with XPath (cached, hardened factories)
- YAML dot-path navigation
- Golden-file snapshot testing
- Soft assertions with CopyOnWriteArrayList (thread-safe)
- RealityAssertions.assertThat() drop-in alias for AssertJ/Truth migration
- Zero-boilerplate custom extensions via Java records (3 lines)
- Zero runtime dependencies in core

Infrastructure:
- GitHub Actions CI (Java 17 + 21, Codecov, Javadoc to GitHub Pages)
- Release workflow with automatic SNAPSHOT stripping from tag
- JaCoCo 95% coverage floor enforced per module
- Supply-chain hardened CI (actions pinned by SHA)

Documentation:
- README, CHANGELOG, MIGRATION.md, CONTRIBUTING.md, DESIGN_DECISIONS.md
- Issue templates and PR template
- docs/ROADMAP_AI.md for planned LLM assertion module

Removed:
- Old single-module src/ structure and validation strategy pattern
- Travis CI configuration
- settings2.xml (contained credentials)